--- a/kubernetes/问题记录.md
+++ b/kubernetes/问题记录.md
@@ -1,4 +1,15 @@
-### kubernetes
+# installation
+## TLS Bootstrap的原理？为什么需要？
+
+# HPA
 
 - [ ] 在k8s 1.19版本中，创建v2bata2的hpa，会发现系统中使用kubectl get hpa命令获取到的资源是 v1版本的，只能看到cpu水线， 无法看到内存，存储的水线，但是使用 `kubectl get 
   --raw=/apis/autoscaling/v1/namespaces/gator-cloud-1000001/horizontalpodautoscalers/ucwi-api-1000001`却可以获取到`v2beta2`版本的hpa资源
+
+
+# 资源
+## 容器内部如何正确获取分配的资源而不是宿主机的资源？？
+
+
+# CNI
+## 一个Node上的两个Pod之间的网络流量到底时怎么走到的？最大带宽如何计算？瓶颈在哪里？
