feat(kubernetes): 记录k8s问题

--- a/kubernetes/问题记录.md
+++ b/kubernetes/问题记录.md
@@ -1,6 +1,12 @@
 # installation
 ## TLS Bootstrap的原理？为什么需要？
 
+# client-go
+## 如何利用client-go实现kubectl apply的效果，有没有线程的接口可以调用？
+
+# apimachinery
+## patch接口的JSONPatchType, MergePatchType, StrategicMergePatchType, ApplyPatchType这几种类型有何区别？ 
+
 # HPA
 
 - [ ] 在k8s 1.19版本中，创建v2bata2的hpa，会发现系统中使用kubectl get hpa命令获取到的资源是 v1版本的，只能看到cpu水线， 无法看到内存，存储的水线，但是使用 `kubectl get 
