feat(kubernetes-kubectl): 学习kubectl命令的使用

--- a/kubernetes/问题记录.md
+++ b/kubernetes/问题记录.md
@@ -4,8 +4,13 @@
 # client-go
 ## 如何利用client-go实现kubectl apply的效果，有没有线程的接口可以调用？
 
+
+
 # apimachinery
 ## patch接口的JSONPatchType, MergePatchType, StrategicMergePatchType, ApplyPatchType这几种类型有何区别？ 
+
+[github参考文章-Difference between JSONPatchType、MergePatchType、StrategicMergePatchType and ApplyPatchType. #977](https://github.com/kubernetes/client-go/issues/977)
+
 
 # HPA
 
