feat(kubernetes): kubernetes问题记录

--- a/kubernetes/问题记录.md
+++ b/kubernetes/问题记录.md
@@ -11,6 +11,7 @@
 
 [github参考文章-Difference between JSONPatchType、MergePatchType、StrategicMergePatchType and ApplyPatchType. #977](https://github.com/kubernetes/client-go/issues/977)
 
+[json-patch和merge-patch的区别](https://erosb.github.io/post/json-patch-vs-merge-patch/)
 
 # HPA
 
