feat(kubernetes-installation): k8s二进制安装

--- a/kubernetes/installation/binary/问题记录.md
+++ b/kubernetes/installation/binary/问题记录.md
@@ -1,3 +1,10 @@
 ### node节点启动kubelet之后，并没有发现给master节点发送CSR请求
 
 ### 如何排查通过systemctl启动的服务？
+
+### 不同版本的K8S如何选择Calica的版本
+
+[参考链接](https://www.yuque.com/xuxiaowei-com-cn/gitlab-k8s/k8s-install)
+
+![calica版本选择](calica-version.png)
+
